[package]
name = "bme280-prometheus"
description = "A bme280 service."
authors = ["David Lawrence Campbell"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
# bme280 = "0.5"
bme280 = { git = "https://github.com/RobinThrift/bme280-rs.git", commit = "12d5e98253e0e8fadbd43895a608263f4a84884d"}
embedded-hal = "1"
linux-embedded-hal = "0.4"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
# rand = "0.8"
termion = "3"

[package.metadata.deb]
maintainer = "David Campbell <dcampbell24@gmail.com>"
assets = [
    ["target/release/bme280-prometheus", "usr/bin/", "755"],
    ["bme280.service", "etc/systemd/system/", "755"],
]
